back/src/kubernetes/overlays/eks-prd-01/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: precatorio
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
    alb.ingress.kubernetes.io/healthcheck-port: http
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: pdpj-precatorio
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: "access_logs.s3.enabled=true,access_logs.s3.bucket=cnj-logs-access,access_logs.s3.prefix=pdpj-precatorio"
  labels:
    app: precatorio
    part-of: pdpj-precatorio
spec:
  tls:
  - hosts:
    - precatorio.pdpj.jus.br
  rules:
  - host: precatorio.pdpj.jus.br
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: precatorio
            port:
              name: http
      - path: /pdpj/info
        pathType: Prefix
        backend:
          service:
            name: precatorio
            port:
              name: http
      - path: /actuator/health
        pathType: Prefix
        backend:
          service:
            name: precatorio
            port:
              name: http
      - path: /swagger-ui.html
        pathType: Prefix
        backend:
          service:
            name: precatorio
            port:
              name: http
...
